--- a/index.html
+++ b/index.html
@@ -11,7 +11,280 @@
         <!-- Styles Css -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
-    <body>
-        <h1>project 4</h1>
+    <body style="height: 5000px">
+        <!---------------Header ------------------>
+        <header class="header">
+            <div class="container">
+                <div class="header__top">
+                    <!-- logo -->
+                    <a href="/">
+                        <div class="logo">
+                            <span class="logo__circle"></span>
+                            <span class="logo__text">
+                                <span class="logo__brand">shine</span>
+                                <span class="logo__brand">smile</span>
+                            </span>
+                        </div>
+                    </a>
+                    <!-- navbar -->
+                    <nav class="navbar">
+                        <ul class="navbar__list">
+                            <li class="navbar__item">
+                                <a
+                                    class="navbar__link navbar__link--active"
+                                    href="/"
+                                >
+                                    Home
+                                </a>
+                            </li>
+                            <li class="navbar__item">
+                                <a class="navbar__link" href="#!">Services</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a class="navbar__link" href="#!">About</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a class="navbar__link" href="#!">Doctors</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!-- Header action -->
+                    <div class="header__action">
+                        <a href="#!" class="action__login">Login</a>
+                        <button class="btn action__signin">Sign In</button>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!---------------Main ------------------>
+        <main>
+            <!--------------- Hero ------------------>
+            <section class="hero">
+                <div class="container">
+                    <!-- Hero content -->
+                    <section class="hero__content">
+                        <h1 class="title hero__title">
+                            Exceptional dental care for all ages.
+                        </h1>
+                        <p class="desc hero__desc">
+                            Exceptional dental care for all ages. Your great
+                            smile begins with a great dentist.
+                        </p>
+                        <div class="hero__row">
+                            <a href="#!" class="btn">Book Online</a>
+                            <span class="hero__phone"
+                                >or call (123) 456-7890</span
+                            >
+                        </div>
+                    </section>
+                    <!-- hero-media -->
+                    <figure class="hero__media">
+                        <img
+                            class="hero__img"
+                            src="./assets/img/hero-1.avif"
+                            alt=""
+                        />
+                        <img
+                            class="hero__img"
+                            src="./assets/img/hero-2.avif"
+                            alt=""
+                        />
+                    </figure>
+                </div>
+            </section>
+            <!--------------- Services ------------------>
+            <section class="services">
+                <div class="container">
+                    <h2 class="title lv2 services__heading">Our services</h2>
+                    <p class="desc services__desc">
+                        Exceptional dental care for all ages. Your great smile
+                        begins with a great dentist.
+                    </p>
+                    <section class="services__row">
+                        <!-- Services Image -->
+                        <figure>
+                            <img
+                                class="services__img"
+                                src="./assets/img/services-1.avif"
+                                alt=""
+                            />
+                        </figure>
+                        <!-- Services List -->
+                        <div class="services__list">
+                            <!-- Services Item 1 -->
+                            <section class="services-item">
+                                <div class="services-item__icon">
+                                    <svg
+                                        width="22"
+                                        height="24"
+                                        viewBox="0 0 22 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M20.3598 2.63964C17.9506 -0.556131 14.2772 -0.568132 11.2481 1.10682C11.001 1.24657 10.7219 1.31411 10.4406 1.30222C10.1592 1.29033 9.88633 1.19945 9.65105 1.03931C8.49552 0.245717 7.29036 -0.316477 5.13904 0.207462C0.623408 1.3071 0 4.90379 0 8.99816C0.0797353 12.1602 0.500857 15.3032 1.25551 18.3683C2.11836 22.0168 3.90382 24 5.43354 24C6.96326 24 7.00963 22.2204 7.00963 20.8016C7.00963 19.2009 7.39505 14.8009 10.8642 14.8009C13.5317 14.8009 14.3333 18.4013 14.3333 20.8016C14.3329 23.095 15.1722 24 16.6628 24C19.5267 24 20.9796 15.3938 21.3719 13.1237C21.7642 10.8535 22.9882 6.12569 20.3598 2.63964Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </div>
+                                <div class="services-item__content">
+                                    <h3 class="services-item__title">
+                                        Oral Surgery
+                                    </h3>
+                                    <p class="desc services-item__desc">
+                                        Everything you expect and then some.
+                                        Cleanings, fillings, and x-rays.
+                                    </p>
+                                </div>
+                            </section>
+                            <!-- Services Item 2 -->
+                            <section class="services-item">
+                                <div class="services-item__icon">
+                                    <svg
+                                        width="22"
+                                        height="24"
+                                        viewBox="0 0 22 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M20.3598 2.63964C17.9506 -0.556131 14.2772 -0.568132 11.2481 1.10682C11.001 1.24657 10.7219 1.31411 10.4406 1.30222C10.1592 1.29033 9.88633 1.19945 9.65105 1.03931C8.49552 0.245717 7.29036 -0.316477 5.13904 0.207462C0.623408 1.3071 0 4.90379 0 8.99816C0.0797353 12.1602 0.500857 15.3032 1.25551 18.3683C2.11836 22.0168 3.90382 24 5.43354 24C6.96326 24 7.00963 22.2204 7.00963 20.8016C7.00963 19.2009 7.39505 14.8009 10.8642 14.8009C13.5317 14.8009 14.3333 18.4013 14.3333 20.8016C14.3329 23.095 15.1722 24 16.6628 24C19.5267 24 20.9796 15.3938 21.3719 13.1237C21.7642 10.8535 22.9882 6.12569 20.3598 2.63964Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </div>
+                                <div class="services-item__content">
+                                    <h3 class="services-item__title">
+                                        Wisdom Teeth Removal
+                                    </h3>
+                                    <p class="desc services-item__desc">
+                                        Everything you expect and then some.
+                                        Cleanings, fillings, and x-rays.
+                                    </p>
+                                </div>
+                            </section>
+                            <!-- Services Item 3 -->
+                            <section class="services-item">
+                                <div class="services-item__icon">
+                                    <svg
+                                        width="22"
+                                        height="24"
+                                        viewBox="0 0 22 24"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                        <path
+                                            d="M20.3598 2.63964C17.9506 -0.556131 14.2772 -0.568132 11.2481 1.10682C11.001 1.24657 10.7219 1.31411 10.4406 1.30222C10.1592 1.29033 9.88633 1.19945 9.65105 1.03931C8.49552 0.245717 7.29036 -0.316477 5.13904 0.207462C0.623408 1.3071 0 4.90379 0 8.99816C0.0797353 12.1602 0.500857 15.3032 1.25551 18.3683C2.11836 22.0168 3.90382 24 5.43354 24C6.96326 24 7.00963 22.2204 7.00963 20.8016C7.00963 19.2009 7.39505 14.8009 10.8642 14.8009C13.5317 14.8009 14.3333 18.4013 14.3333 20.8016C14.3329 23.095 15.1722 24 16.6628 24C19.5267 24 20.9796 15.3938 21.3719 13.1237C21.7642 10.8535 22.9882 6.12569 20.3598 2.63964Z"
+                                            fill="currentColor"
+                                        />
+                                    </svg>
+                                </div>
+                                <div class="services-item__content">
+                                    <h3 class="services-item__title">
+                                        Preventative Dentistry
+                                    </h3>
+                                    <p class="desc services-item__desc">
+                                        Everything you expect and then some.
+                                        Cleanings, fillings, and x-rays.
+                                    </p>
+                                </div>
+                            </section>
+                            <a href="#!" class="btn services__btn">
+                                All Services
+                            </a>
+                        </div>
+                    </section>
+                </div>
+            </section>
+            <!--------------- Work ------------------>
+            <section class="work">
+                <div class="container">
+                    <h2 class="title lv2 work__heading">How it works</h2>
+                    <p class="desc work__desc">
+                        Exceptional dental care for all ages. Your great smile
+                        begins with a great dentist.
+                    </p>
+                    <div class="work__list">
+                        <!-- Work Item 1 -->
+                        <a href="#!">
+                            <section class="work-item">
+                                <section class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img
+                                            src="./assets/img/work-1.svg"
+                                            alt="Search doctor"
+                                            class="work-item__img"
+                                        />
+                                    </div>
+                                    <h3 class="work-item__heading">
+                                        Search doctor
+                                    </h3>
+                                    <p class="desc work-item__desc">
+                                        Search a doctor by education,
+                                        qualifications or experience-contact for
+                                        inquiry.
+                                    </p>
+                                    <a href="#!" class="work-item__link">
+                                        Learn More
+                                    </a>
+                                </section>
+                            </section>
+                        </a>
+                        <!-- Work Item 2 -->
+                        <a href="#!">
+                            <section class="work-item">
+                                <section class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img
+                                            src="./assets/img/work-2.svg"
+                                            alt="Find best doctor"
+                                            class="work-item__img"
+                                        />
+                                    </div>
+                                    <h3 class="work-item__heading">
+                                        Find best doctor
+                                    </h3>
+                                    <p class="desc work-item__desc">
+                                        Search a doctor by education,
+                                        qualifications or experience-contact for
+                                        inquiry.
+                                    </p>
+                                    <a href="#!" class="work-item__link"
+                                        >Learn More</a
+                                    >
+                                </section>
+                            </section>
+                        </a>
+                        <!-- Work Item 3 -->
+                        <a href="#!">
+                            <section class="work-item">
+                                <section class="work-item__content">
+                                    <div class="work-item__icon">
+                                        <img
+                                            src="./assets/img/work-3.svg"
+                                            alt="Get treatment"
+                                            class="work-item__img"
+                                        />
+                                    </div>
+                                    <h3 class="work-item__heading">
+                                        Get treatment
+                                    </h3>
+                                    <p class="desc work-item__desc">
+                                        Search a doctor by education,
+                                        qualifications or experience-contact for
+                                        inquiry.
+                                    </p>
+                                    <a href="#!" class="work-item__link"
+                                        >Learn More</a
+                                    >
+                                </section>
+                            </section>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <!---------------Footer------------------>
+        <footer class="footer"></footer>
     </body>
 </html>
