Fix bug icon social footer

--- a/index.html
+++ b/index.html
@@ -680,8 +680,8 @@
                         <h3 class="footer__heading">Stay In Touch</h3>
                         <div class="footer__social">
                             <!-- facebook -->
-                            <div class="footer__img">
-                                <a href="#!">
+                            <div>
+                                <a class="footer__img" href="#!">
                                     <svg
                                         width="6"
                                         height="12"
@@ -697,8 +697,8 @@
                                 </a>
                             </div>
                             <!-- twitter -->
-                            <div class="footer__img">
-                                <a href="#!">
+                            <div>
+                                <a class="footer__img" href="#!">
                                     <svg
                                         width="16"
                                         height="12"
@@ -714,8 +714,8 @@
                                 </a>
                             </div>
                             <!-- Linkedin -->
-                            <div class="footer__img">
-                                <a href="#!">
+                            <div>
+                                <a class="footer__img" href="#!">
                                     <svg
                                         width="13"
                                         height="12"
