--- a/index.html
+++ b/index.html
@@ -528,11 +528,13 @@
                                         />
                                     </figure>
                                     <section class="news-item__content">
-                                        <h3 class="news-item__heading">
+                                        <h3
+                                            class="news-item__heading line-clamp"
+                                        >
                                             Key Considerations for Regulatory
                                             Compliant.
                                         </h3>
-                                        <p class="news-item__desc">
+                                        <p class="news-item__desc line-clamp">
                                             It’s easy to think about medical
                                             care from a narrow perspective. You
                                             go to the hospital.
@@ -554,14 +556,18 @@
                                         />
                                     </figure>
                                     <section class="news-item__content">
-                                        <h3 class="news-item__heading">
+                                        <h3
+                                            class="news-item__heading line-clamp"
+                                        >
                                             Key Considerations for Regulatory
                                             Compliant.
                                         </h3>
-                                        <p class="news-item__desc">
-                                            It’s easy to think about medical
-                                            care from a narrow perspective. You
-                                            go to the hospital.
+                                        <p class="news-item__desc line-clamp">
+                                            It’seasytothinkaboutmedical
+                                            carefromanarrowperspective.You
+                                            gotothehospital.It’seasytothinkaboutmedical
+                                            carefromanarrowperspective.You
+                                            gotothehospital.
                                         </p>
                                         <a href="#!" class="news-item__link"
                                             >Learn More</a
